puck_liveview/src/html/snapshots/puck_liveview__html__html_conversion_offset_starting_id.snap
---
source: puck_liveview/src/html/mod.rs
expression: output

---
Element {
    id: 1,
    name: "form",
    attributes: {},
    listeners: [],
    children: [
        Element {
            id: 2,
            name: "input",
            attributes: {
                "type": "text",
            },
            listeners: [],
            children: [],
            text: None,
            key: None,
        },
        Element {
            id: 3,
            name: "input",
            attributes: {
                "type": "submit",
            },
            listeners: [],
            children: [],
            text: None,
            key: None,
        },
    ],
    text: None,
    key: None,
}
