puck_liveview/src/html/snapshots/puck_liveview__html__html_conversion_simple.snap
---
source: puck_liveview/src/html/mod.rs
expression: output

---
Element {
    id: 0,
    name: "div",
    attributes: {},
    listeners: [],
    children: [],
    text: None,
    key: None,
}
